--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,3 +7,13 @@ body {
   text-align: center;
   margin-top: 100px;
 }
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  margin: 1em;
+}
+
+.form-container {
+  border: 1px solid black;
+}
