--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -130,7 +130,7 @@ body {
 }
 
 .card .btn {
-  background-image: url(../img/fishbtn.png);
+  background-image: url(./img/fishbtn.png);
   background-size: 15em;
   background-repeat: no-repeat;
   background-position: center;
